--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://content.codecademy.com/programs/react/jammming/favicon.ico?_gl=1*15sfibm*_ga*NjcwMDk5OTYzLjE2NTE3NTQ3NDE.*_ga_3LRZM6TM9L*MTY1MzY1MTg1Ni44NC4xLjE2NTM2NTMxMTkuNTg." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
