--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" type="type/css" href="./reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Work+Sans:wght@300;500&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
